# fund-report

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  models.py  scheduler.py  schemas.py
app/services/: backtest.py  calculations.py  calendar.py  data_sources.py  fund_filters.py  llm_client.py  llm_utils.py  portfolio.py  portfolio_rules.py  recommender.py  report_service.py  report_summary.py  research_jobs.py  sector_heat.py  sector_recommendation.py  settings_store.py  signals.py  storage.py
app/static/: styles.css
app/templates/: base.html  fund_detail.html  funds.html  heat.html  holdings.html  index.html  jobs.html  rankings.html  report.html  report_content.html  research.html  sector_funds.html  settings.html  signals.html  watchlist.html
tests/: test_calculations.py  test_calendar.py  test_data_sources.py  test_filters.py  test_jobs.py  test_portfolio.py  test_portfolio_signals.py  test_recommender.py  test_report_service.py  test_research.py  test_sector_heat.py  test_sector_recommendation.py  test_signals.py
tools/: deploy-nas.ps1
