[project]
name = "fund-report"
version = "0.1.0"
description = "A-share close report dashboard for NAS deployment"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pandas>=2.2.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
